Fixed couple of things